# hammurabi

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README-en.md  README.md  index.txt  mise.toml
.cargo/: config.toml
src/: codegen.rs  config.rs  lib.rs  main.rs  math.rs  proof_store.rs  wasm.rs
src/ai_gen/: client.rs  mod.rs
src/compiler/: verifier.rs
src/lang/: goal.rs  mod.rs  rail.rs
src/lsp/: brace.rs  mod.rs
www/: index.html
