[package]
name        = "hammurabi"
version     = "0.1.0"
edition     = "2021"
description = "A logic-first AI-native language where correctness is proven, not tested"
authors     = ["Hammurabi Language Team"]
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/hammurabi-lang/hammurabi"
homepage    = "https://github.com/hammurabi-lang/hammurabi"
keywords    = ["logic", "codegen", "ai", "formal-verification", "contract"]
categories  = ["development-tools", "command-line-utilities"]

# --------------------------------------------------------------------------
# バイナリターゲット
# --------------------------------------------------------------------------
[[bin]]
name = "hb"
path = "src/bin/hb.rs"

[[bin]]
name = "run_hb"
path = "src/bin/run_hb.rs"

[[bin]]
name = "hammurabi_lsp"
path = "src/bin/hammurabi_lsp.rs"

# --------------------------------------------------------------------------
# ライブラリターゲット
# --------------------------------------------------------------------------
# cdylib: wasm-pack が WASM バイナリをビルドするために必要
# rlib  : cargo test・通常の Rust クレートとして使うために必要
# --------------------------------------------------------------------------
[lib]
crate-type = ["cdylib", "rlib"]

# --------------------------------------------------------------------------
# Features
# --------------------------------------------------------------------------
# `default` は空 — 外部ノードでは依存のない最小ビルドが可能。
#
# `ai`         : OpenAI / Anthropic API（hb gen / hb ai の AI 生成モード）
# `z3-backend` : Z3 SMT ソルバー（--verifier z3、brew install z3 + ヘッダ/ライブラリが必要）
# `full`       : ai + z3-backend をまとめて有効（ローカル開発向け）
# `wasm`       : wasm-bindgen を有効化してブラウザ実行可能にする
# --------------------------------------------------------------------------
[features]
default      = []
full         = ["ai", "z3-backend"]
z3-backend   = ["z3"]
wasm         = ["wasm-bindgen", "console_error_panic_hook"]
ai           = ["dep:ureq"]

[dependencies]
thiserror  = "1"
sha2       = "0.10"
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hmac       = "0.12"
hex        = "0.4.3"
dotenvy    = "0.15"

wasm-bindgen            = { version = "0.2",  optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
lsp-server = "0.7"
lsp-types = "0.97"
anyhow = "1.0.102"
ureq = { version = "3.2.0", features = ["json"], optional = true }

[dependencies.z3]
version  = "0.19"
optional = true

[dev-dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
